--- a/package.json
+++ b/package.json
@@ -10,20 +10,37 @@
     "test": "react-scripts-ts test --env=jsdom"
   },
   "dependencies": {
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts-ts": "^4.0.8"
+    "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "react-scripts-ts": "^4.0.8",
+    "redux": "^4.0.1",
+    "redux-debounced": "^0.5.0",
+    "redux-responsive": "^4.3.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/history": "^4.7.2",
     "@types/jest": "^23.3.9",
+    "@types/moment-timezone": "^0.5.9",
     "@types/node": "^10.12.6",
     "@types/react": "^16.7.3",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router": "^4.4.1",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.16",
+    "@types/redux-debounced": "^0.2.19",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
+    "redux-devtools-extension": "^2.13.5",
     "tslint-config-airbnb": "^5.11.0",
     "typescript": "^3.1.6"
   },
