--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "build": "react-scripts-ts build",
+    "copy": "cpx \"build/**/*.*\" ../server/build/ -v",
     "coverage": "react-scripts-ts test --env=jsdom --coverage",
+    "deploy": "npm-run-all build copy",
     "eject": "react-scripts-ts eject",
     "start": "react-scripts-ts start",
     "test": "react-scripts-ts test --env=jsdom"
@@ -41,6 +43,7 @@
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
+    "npm-run-all": "^4.1.3",
     "redux-devtools-extension": "^2.13.5",
     "tslint-config-airbnb": "^5.11.0",
     "typescript": "^3.1.6"
