--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
     "redux-responsive": "^4.3.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
