--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "react": "^16.6.3",
@@ -28,6 +29,7 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.6",
     "@types/enzyme": "^3.1.15",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/history": "^4.7.2",
