--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.16",
     "@types/redux-debounced": "^0.2.19",
+    "@types/sinon": "^5.0.7",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.7.0",
     "enzyme-to-json": "^3.3.4",
     "npm-run-all": "^4.1.3",
     "redux-devtools-extension": "^2.13.5",
+    "sinon": "^7.1.1",
     "tslint-config-airbnb": "^5.11.0",
     "typescript": "^3.1.6"
   },
