--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - 8
-  - 10
-  - node
-matrix:
-  include:
-    - os: osx
-      node_js: 8
+  - 6
+cache:
+  directories:
+    - node_modules
+script:
+  - npm run build
+  - npm test
