--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ cache:
     - node_modules
 script:
   - npm test
+after_script: # Upload coverage reports
+- COVERALLS_REPO_TOKEN=$coveralls_repo_token npm run coveralls
