--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "test": "react-scripts-ts test --env=jsdom"
   },
   "dependencies": {
+    "@material-ui/core": "^3.6.1",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "moment": "^2.22.2",
